--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -3,6 +3,7 @@
     [leafletOptions]="options"
     (leafletMapReady)="onMapReady($event)"
     (leafletClick)="onMapClick($event)"
+    (leafletMapMoveEnd)="refreshAllVisibleMarkers()"
 >
     <!-- Marker Layer (tools & neighbors together) -->
     @if (true) {
