--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,27 +1,29 @@
 <div class="container">
     <div class="left-section">
         @if(visibleNeighbors) {
-            <mat-card class="main">
-                <mat-card-header>
-                    <mat-card-title>{{ visibleNeighbors.length }}</mat-card-title>
-                </mat-card-header>
-
-                <mat-card-content>
-                    @for(neighbor of visibleNeighbors; track neighbor.id) {
-                        <mat-card class="neighbor-card">
-                            <mat-card-header>
-                                <mat-card-subtitle>{{ neighbor.name }}</mat-card-subtitle>
-                            </mat-card-header>
-                            <mat-card-content>
-                                {{ neighbor.id }}
-                            </mat-card-content>
-                        </mat-card>
-                    }
-                </mat-card-content>
-            </mat-card>
+            @for(neighbor of visibleNeighbors; track neighbor.id) {
+                <mat-card class="person-card">
+                    <mat-card-content>
+                        <h2 class="person-name">{{ neighbor.name }}</h2>
+                        <div class="person-body">
+                            <img [src]="neighbor.imageUrl" [alt]="neighbor.name" class="person-image" />
+                            @if(neighbor.is_friend) {
+                                <span class="friend-tag">FRIEND</span>
+                            }
+                            <div class="person-info">
+                                <p class="person-address">{{ neighbor.home_address }} </p>
+                            </div>
+                        </div>
+                    </mat-card-content>
+                </mat-card>
+            }
         }
     </div>
 
     <div class="right-section">
-        <app-map #mapRef (visibleNeighborsCleared)="onVisibleNeighborCleared()"></app-map>
+        <app-map
+            #mapRef
+            (visibleNeighborsCleared)="onVisibleNeighborsCleared()"
+            (visibleToolsCleared)="onVisibleToolsCleared()"
+        ></app-map>
     </div>
