--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,31 @@
-<router-outlet></router-outlet>
+<div class="container">
+  <header class="header">
+    <div class="logo"><img src="images/logo-300.png"></div>
+    <button mat-icon-button [matMenuTriggerFor]="menu" class="hamburger-button">
+      <mat-icon>menu</mat-icon>
+      </button>
+
+      <mat-menu #menu="matMenu">
+      <button mat-menu-item routerLink="/home">
+          <mat-icon>home</mat-icon>
+          <span>Home</span>
+      </button>
+      <button mat-menu-item [routerLink]="['/friends']">
+          <mat-icon>people</mat-icon>
+          <span>Manage Friends</span>
+      </button>
+      <button mat-menu-item routerLink="/tools">
+          <mat-icon fontSet="fa" fontIcon="fa-toolbox"></mat-icon>
+          <span>Manage My Tools</span>
+      </button>
+      </mat-menu>
+  </header>
+
+  <main class="content">
+    <router-outlet></router-outlet>
+  </main>
+
+  <footer class="footer">
+    <p>&copy; 2025 Neighborhood Tool Hub</p>
+  </footer>
+</div>
