--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,27 +1,4 @@
-<header class="header">
-  <div class="logo"><img src="images/logo-300.png"></div>
-  <button mat-icon-button [matMenuTriggerFor]="menu" class="hamburger-button">
-    <mat-icon>menu</mat-icon>
-    </button>
-
-    <mat-menu #menu="matMenu">
-    <button mat-menu-item routerLink="/home">
-        <mat-icon>home</mat-icon>
-        <span>Home</span>
-    </button>
-    <button mat-menu-item routerLink="/friends">
-        <mat-icon>people</mat-icon>
-        <span>Manage Friends</span>
-    </button>
-    <button mat-menu-item routerLink="/tools">
-        <mat-icon fontSet="fa" fontIcon="fa-toolbox"></mat-icon>
-        <span>Manage My Tools</span>
-    </button>
-    </mat-menu>
-
-</header>
-
-<main class="main-grid">
+<div class="main-grid">
   <div class="left-column">
     <section class="search-tools">
       <h2>Search for Tools</h2>
@@ -71,8 +48,4 @@
         </section>
 
   </div>
-</main>
-
-<footer class="footer">
-  <p>&copy; 2025 CommunityHub</p>
-</footer>
+</div>
