--- a/src/app/user/friends/managefriends.component.scss
+++ b/src/app/user/friends/managefriends.component.scss
@@ -50,8 +50,8 @@
 }
 
 .person-image {
-  width: 100px;
-  height: 100px;
+  width: 90px;
+  height: 90px;
   object-fit: cover;
   border-radius: 50%;
   margin-right: 20px;
@@ -68,6 +68,19 @@
 }
 
 .friend-tag {
+  position: absolute;
+  bottom: 8px;
+  right: 8px;
+  background-color: #228b22;
+  color: white;
+  padding: 4px 8px;
+  font-size: 0.75rem;
+  border-radius: 12px;
+  font-weight: bold;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+}
+
+.friend-of-friend-tag {
   position: absolute;
   bottom: 8px;
   right: 8px;
