--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,8 +1,12 @@
-.pokemon-card {
+::ng-deep .mat-mdc-dialog-surface {
+  border-radius: 15px !important;
+}
+
+.neighbor-card {
   width: 300px;
   background: linear-gradient(to bottom right, #fffacd, #f0e68c);
   border: 4px solid #333;
-  border-radius: 15px;
+  border-radius: 15px !important;
   box-shadow: 0 8px 16px rgba(0,0,0,0.3);
   padding: 20px;
   text-align: center;
@@ -16,27 +20,32 @@
   margin-bottom: 10px;
 }
 
-.pokemon-name {
+.neighbor-name {
   font-size: 24px;
   font-weight: bold;
   margin: 0;
 }
 
-.pokemon-type {
+.neighbor-type {
   padding: 5px 10px;
   border-radius: 12px;
   color: white;
   font-weight: bold;
   font-size: 14px;
-  text-transform: capitalize;
+  text-transform: uppercase;
 }
-
-.electric { background-color: #f7d02c; }
-.fire     { background-color: #ee8130; }
-.water    { background-color: #6390f0; }
-.grass    { background-color: #7ac74c; }
-.psychic  { background-color: #f95587; }
-/* Add more types as needed */
+.friend-tag {
+  background-color: #228b22;
+  color: white;
+  padding: 4px 8px;
+  font-size: 0.75rem;
+  border-radius: 12px;
+  font-weight: bold;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+}
+.friend-tag.friend-of-friend-tag {
+  background-color: #007bff !important;
+}
 
 .card-image img {
   width: 150px;
@@ -45,8 +54,17 @@
 }
 
 .card-stats {
-  font-size: 14px;
-  margin: 10px 0;
+  display: grid;
+  column-gap: 1rem;
+  row-gap: 0;
+  grid-template-columns: auto 1fr;
+}
+.card-stats .left-col {
+  font-weight: bold;
+  text-align: left;
+  white-space: nowrap;
+}
+.card-stats .right-col {
   text-align: left;
 }
 
@@ -54,4 +72,30 @@
   font-size: 13px;
   font-style: italic;
   margin-top: 10px;
+}
+
+.button-section {
+  display: flex;
+  gap: 0.75rem;
+  padding: 1rem;
+  justify-content: center;
+}
+
+.btn {
+  border: 2px solid purple;
+  padding: 0.5rem 1rem;
+  border-radius: 6px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+.btn.friend {
+  border: 2px solid #228b22;
+}
+.btn.friend_of_friend {
+  border: 2px solid #007bff;
+}
+
+.btn:hover {
+  opacity: 0.85;
 }
