--- a/src/app/user/friends/managefriends.component.html
+++ b/src/app/user/friends/managefriends.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="left-section">
         @if(allVisibleNeighbors) {
-            @for(neighbor of allVisibleNeighbors; track neighbor.id) {
-                <mat-card class="person-card" (click)="onListNeighborClick(neighbor.id)">
+            @for(neighbor of allVisibleNeighbors; track neighbor.id; let i = $index) {
+                <mat-card #neighborCards class="person-card" (click)="onListNeighborClick(i)">
                     <mat-card-content>
                         <h2 class="person-name">{{ neighbor.name }}</h2>
                         <div class="person-body">
