Cleanup and added .bind(this) a few places to make sure everything runs in the right scope.

--- a/src/app/user/friends/managefriends.component.html
+++ b/src/app/user/friends/managefriends.component.html
@@ -27,10 +27,12 @@
         @if(markerData) {
             <app-map
                 #mapRef
+                [defaultCenterLocation]="defaultCenterLocation"
+                [defaultZoomLevel]="defaultZoomLevel"
                 [layerGroupNames]="layerGroupNames"
                 [markerData]="markerData"
                 [sortFunction]="sortFunction"
-                [convertIdToObject]="idToNeighbor"
+                [convertIdToObject]="idToNeighbor.bind(this)"
                 (visibleLayersCleared)="onVisibleLayersCleared($event)"
                 (visibleLayersRefreshed)="onVisibleLayersRefreshed($event)"
                 (ready)="onReady($event)"
