--- a/src/app/friend-card/friend-card.component.scss
+++ b/src/app/friend-card/friend-card.component.scss
@@ -35,7 +35,7 @@
   text-transform: uppercase;
 }
 .friend-tag {
-  background-color: #228b22;
+  background-color: #013220;
   color: white;
   padding: 4px 8px;
   font-size: 0.75rem;
@@ -44,7 +44,7 @@
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
 .friend-tag.friend-of-friend-tag {
-  background-color: #007bff !important;
+  background-color: #228b22 !important;
 }
 
 .card-image img {
@@ -90,10 +90,10 @@
   transition: background-color 0.2s ease;
 }
 .btn.friend {
-  border: 2px solid #228b22;
+  border: 2px solid #013220;
 }
 .btn.friend_of_friend {
-  border: 2px solid #007bff;
+  border: 2px solid #228b22;
 }
 
 .btn:hover {
