--- a/src/app/user/friends/managefriends.component.scss
+++ b/src/app/user/friends/managefriends.component.scss
@@ -71,7 +71,7 @@
   position: absolute;
   bottom: 8px;
   right: 8px;
-  background-color: #228b22;
+  background-color: #013220;
   color: white;
   padding: 4px 8px;
   font-size: 0.75rem;
@@ -84,7 +84,7 @@
   position: absolute;
   bottom: 8px;
   right: 8px;
-  background-color: #007bff;
+  background-color: #228b22;
   color: white;
   padding: 4px 8px;
   font-size: 0.75rem;
