--- a/src/app/user/friends/managefriends.component.html
+++ b/src/app/user/friends/managefriends.component.html
@@ -1,6 +1,10 @@
 <div class="container">
     <div class="left-section">
         @if(allVisibleNeighbors) {
+            <div class="neighbor-header">
+                <h2>Viewing <span [class.bounce]="neighborCountBounceFlag()">{{ allVisibleNeighborsCount() }}</span> Neighbors</h2>
+            </div>
+
             @for(neighbor of allVisibleNeighbors; track neighbor.id; let i = $index) {
                 <mat-card #neighborCards class="person-card" (click)="onListNeighborClick(i)">
                     <mat-card-content>
