--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <header class="header">
-    <div class="logo"><img src="images/logo-300.png"></div>
+    <div class="logo" routerLink="/home"><img src="images/logo-300.png"></div>
     <button mat-icon-button [matMenuTriggerFor]="menu" class="hamburger-button">
       <mat-icon>menu</mat-icon>
       </button>
