--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,10 @@
           <mat-icon>home</mat-icon>
           <span>Home</span>
       </button>
+      <button mat-menu-item (click)="openMyInfoDialog()">
+          <mat-icon>account_circle</mat-icon>
+          <span>My Info</span>
+      </button>
       <button mat-menu-item [routerLink]="['/friends']">
           <mat-icon>people</mat-icon>
           <span>Manage Friends</span>
