Added manage my tools thing.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
             <mat-icon>people</mat-icon>
             <span>Manage Friends</span>
         </button>
-        <button mat-menu-item routerLink="/tools">
+        <button mat-menu-item routerLink="/mytools">
             <mat-icon fontSet="fa" fontIcon="fa-toolbox"></mat-icon>
             <span>Manage My Tools</span>
         </button>
