Abstracted ManageFriends into BrowseObjects so that BrowseTools can use the same parent component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,11 @@
             <mat-icon fontSet="fa" fontIcon="fa-sign-out"></mat-icon>
             <span>Logout</span>
         </button>
+
+        <button mat-menu-item routerLink="/browse">
+            <mat-icon fontSet="fa" fontIcon="fa-toolbox"></mat-icon>
+            <span>Browse Tools</span>
+        </button>
       </mat-menu>
     }
   </header>
