--- a/src/app/user/mytools/mytools.component.html
+++ b/src/app/user/mytools/mytools.component.html
@@ -13,7 +13,7 @@
                     <mat-card-content class="tool-details">
                         <div>
                             <h3>{{ tool.name }}</h3>
-                            <a class="tool-link" [href]="tool.product_url">Product Link</a>
+                            <a class="tool-link" [href]="tool.product_url" target="_blank" rel="noopener noreferrer">Product Link</a>
                         </div>
                         <div>
                             <img [src]="tool.imageUrl" [alt]="tool.name" class="tool-image" />
