--- a/src/app/browsetools/browsetools.component.scss
+++ b/src/app/browsetools/browsetools.component.scss
@@ -12,7 +12,7 @@
   box-sizing: border-box;
 }
 
-.neighbor-header {
+.header {
   background-color: #f0f4ff;
   padding: 1rem;
   border-radius: 8px;
@@ -24,7 +24,7 @@
   justify-content: center;
 }
 
-.neighbor-header h2 {
+.header h2 {
   font-size: 1.4rem;
   color: #333;
 }
@@ -42,7 +42,7 @@
   background-color: #fffaf0;
 }
 
-.person-card {
+.tool-card {
   display: flex;
   flex-direction: column;
   background: #fff;
@@ -53,61 +53,69 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.person-name {
-  font-size: 1.5rem;
-  margin-top: 0px;
-  margin-bottom: 12px;
-  color: #333;
-  text-align: left;
+.title-row {
+  font-weight: bolder;
+  display: flex;
+  width: 100%;
+  align-items: top;
 }
 
-.person-body {
+.title-row > div:first-of-type {
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
+.title-row > div:last-of-type {
+  flex-grow: 0;
+}
+
+.tool-owner {
+  flex-grow: 0;
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.tool-details {
   display: flex;
   align-items: center;
 }
 
-.person-image {
+.tool-details > div:first-of-type {
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
+.tool-details > div:last-of-type {
+  flex-grow: 0;
+}
+
+.tool-details h3 {
+  color: #333;
+  text-align: left;
+}
+
+.tool-image {
   width: 90px;
   height: 90px;
   object-fit: cover;
-  border-radius: 50%;
-  margin-right: 20px;
+  border-radius: 25%;
+  border: 2px solid #eee;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
-.person-info {
-  flex: 1;
+.tool-link {
+  display: inline-block;
+  margin-top: 4px;
+  color: #1976d2;
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.2s ease;
 }
 
-.person-address {
-  margin: 0;
-  color: #666;
-  font-size: 0.9rem;
-}
-
-.friend-tag {
-  position: absolute;
-  bottom: 8px;
-  right: 8px;
-  background-color: #013220;
-  color: white;
-  padding: 4px 8px;
-  font-size: 0.75rem;
-  border-radius: 12px;
-  font-weight: bold;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-}
-
-.friend-of-friend-tag {
-  position: absolute;
-  bottom: 8px;
-  right: 8px;
-  background-color: #228b22;
-  color: white;
-  padding: 4px 8px;
-  font-size: 0.75rem;
-  border-radius: 12px;
-  font-weight: bold;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+.tool-link:hover {
+  color: #0d47a1;
 }
 
 @keyframes blinkBorder {
