--- a/src/app/browsetools/browsetools.component.scss
+++ b/src/app/browsetools/browsetools.component.scss
@@ -30,14 +30,23 @@
 }
 
 .left-section {
-  flex: 1;
+  flex: 1 5 30%;
+  min-width: 20%;
   overflow-y: auto;
   background-color: #f0f8ff;
   border-right: 2px solid #ccc;
 }
 
+.grabber{
+    width:10px;
+}
+.grabber:hover{
+    cursor:e-resize;
+}
+
 .right-section {
-  flex: 3;
+  flex: 1 5 70%;
+  min-width: 10%;
   height: 100%;
   background-color: #fffaf0;
 }
@@ -49,7 +58,6 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 16px;
-  max-width: 600px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
