--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -49,6 +49,17 @@ header {
     background: white;
     border-radius: 50%;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    padding: 0;
+    width: 35px;
+    height: 35px;
+    border: none;
+  }
+
+  .hamburger-photo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
   }
 }
 
