In manage friends, show how many tools each friend has.

--- a/src/app/user/friends/managefriends.component.html
+++ b/src/app/user/friends/managefriends.component.html
@@ -20,6 +20,9 @@
                             }
                             <div class="person-info">
                                 <p class="person-address">{{ neighbor.home_address }} </p>
+                                @if (neighbor.tool_count > 0) {
+                                    <p class="person-toolcount">Sharing {{ neighbor.tool_count }} tools!</p>
+                                }
                             </div>
                         </div>
                     </mat-card-content>
